Add site content

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="reset.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Triangle Monday</h1>
+    <div>
+      <h3>Contact</h3>
+      <a href="mailto:andrea@trianglemonday.com">Email</a>
+    </div>
+  </body>
 </html>
