Add video and image

--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
   </head>
 
   <body>
-    <h1>Triangle Monday</h1>
-    <div>
-      <h3>Contact</h3>
-      <a href="mailto:andrea@trianglemonday.com">Email</a>
-    </div>
+    <h1 class="sr-only">Triangle Monday</h1>
+    <img
+      alt="Triangle Monday logo"
+      src="./assets//Triangle_Monday_Black_logo_RGB.svg"
+    />
+
+    <!-- <div class="top-banner">
+      <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
+    </div> -->
+    <iframe
+      src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
+      class="video"
+      frameborder="0"
+      height="100%"
+      width="100%"
+      allow="autoplay; fullscreen; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+
+    <dl class="contact-box">
+      <dt>Contact:</dt>
+      <dd><a href="mailto:andrea@trianglemonday.com">Email</a></dd>
+    </dl>
   </body>
 </html>
