--- a/index.html
+++ b/index.html
@@ -20,16 +20,9 @@
 
   <body>
     <h1 class="sr-only">Triangle Monday</h1>
-    <img
-      alt="Triangle Monday logo"
-      src="./assets//Triangle_Monday_Black_logo_RGB.svg"
-    />
 
-    <!-- <div class="top-banner">
-      <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
-    </div> -->
     <iframe
-      src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
+      src="https://player.vimeo.com/video/340023393?h=a445a95762"
       class="video"
       frameborder="0"
       height="100%"
@@ -38,9 +31,10 @@
       allowfullscreen
     ></iframe>
 
-    <dl class="contact-box">
-      <dt>Contact:</dt>
-      <dd><a href="mailto:andrea@trianglemonday.com">Email</a></dd>
-    </dl>
+    <div class="image-wrapper">
+      <img alt="Triangle Monday logo" src="./assets/cropped_v2.svg" />
+    </div>
+
+    <a class="contact" href="mailto:andrea@trianglemonday.com">Contact</a>
   </body>
 </html>
