Add banner logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
   <body>
     <h1 class="sr-only">Triangle Monday</h1>
-
+    <!-- 
+    <div class="top-banner">
+      <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
+    </div> -->
     <iframe
       src="https://player.vimeo.com/video/340023393?h=a445a95762"
       class="video"
@@ -31,10 +34,12 @@
       allowfullscreen
     ></iframe>
 
-    <div class="image-wrapper">
-      <img alt="Triangle Monday logo" src="./assets/cropped_v2.svg" />
-    </div>
+    <div class="bottom-of-page">
+      <div class="image-wrapper">
+        <img alt="Triangle Monday logo" src="./assets/cropped_v2.svg" />
+      </div>
 
-    <a class="contact" href="mailto:andrea@trianglemonday.com">Contact</a>
+      <a class="contact" href="mailto:andrea@trianglemonday.com">Contact</a>
+    </div>
   </body>
 </html>
