--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
   <body>
     <h1 class="sr-only">Triangle Monday</h1>
-    <!-- 
-    <div class="top-banner">
+
+    <!-- <div class="top-banner">
       <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
     </div> -->
     <iframe
-      src="https://player.vimeo.com/video/340023393?h=a445a95762"
+      src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
       class="video"
       frameborder="0"
       height="100%"
