--- a/index.html
+++ b/index.html
@@ -101,64 +101,64 @@
       </p>
       <p>Powered by sunshine, plants and nature.</p>
 
-      <h3 class="previous-clients">Previous clients include:</h3>
+      <h3 class="previous-clients">Clients:</h3>
       <ul>
-        <li>adam&eveDDB,</li>
-        <li>Analog Folk,</li>
-        <li>Apple,</li>
-        <li>Bentley,</li>
-        <li>Canon,</li>
-        <li>Cheetah Conservation Fund,</li>
-        <li>Conservation International,</li>
-        <li>Conservation Carpathia,</li>
-        <li>Dior,</li>
-        <li>Dyson,</li>
-        <li>Ellen MacArthur Foundation,</li>
-        <li>Environmental Investigation Agency (EIA),</li>
-        <li>Fairphone,</li>
-        <li>Four Paws,</li>
-        <li>The Guardian,</li>
-        <li>Harpers Bazaar Netherlands,</li>
-        <li>Havas London,</li>
-        <li>HESC,</li>
-        <li>IFAW,</li>
-        <li>IKEA,</li>
-        <li>International Animal Rescue,</li>
-        <li>Jack Wolfskin,</li>
-        <li>the Jane Goodall Institute,</li>
-        <li>John Lewis,</li>
-        <li>K9,</li>
-        <li>lastminute.com,</li>
-        <li>L’Oreal,</li>
-        <li>made.com,</li>
-        <li>Max Factor,</li>
-        <li>MAL,</li>
-        <li>New York Times Magazine,</li>
-        <li>National Whistleblower Center,</li>
-        <li>Natura &Co.,</li>
-        <li>Nike,</li>
-        <li>Nikon,</li>
-        <li>Ocean Alliance,</li>
-        <li>Oman Air,</li>
-        <li>Overfinch,</li>
-        <li>Parley,</li>
-        <li>Rewriting Extinction,</li>
-        <li>Sunday Times Style,</li>
-        <li>Sunshine Agency,</li>
-        <li>Surfers Against Sewage,</li>
-        <li>The Telegraph,</li>
-        <li>The Times,</li>
-        <li>TRAFFIC,</li>
-        <li>TRESemme,</li>
-        <li>Unilever,</li>
-        <li>Versatile Studios,</li>
-        <li>Vodafone,</li>
-        <li>Vogue,</li>
-        <li>vWieden + Kennedy,</li>
-        <li>Wildlife Justice Commission.,</li>
+        <li>adam&eveDDB</li>
+        <li>Analog Folk</li>
+        <li>Apple</li>
+        <li>Bentley</li>
+        <li>Canon</li>
+        <li>Cheetah Conservation Fund</li>
+        <li>Conservation International</li>
+        <li>Conservation Carpathia</li>
+        <li>Dior</li>
+        <li>Dyson</li>
+        <li>Ellen MacArthur Foundation</li>
+        <li>Environmental Investigation Agency (EIA)</li>
+        <li>Fairphone</li>
+        <li>Four Paws</li>
+        <li>The Guardian</li>
+        <li>Harpers Bazaar Netherlands</li>
+        <li>Havas London</li>
+        <li>HESC</li>
+        <li>IFAW</li>
+        <li>IKEA</li>
+        <li>International Animal Rescue</li>
+        <li>Jack Wolfskin</li>
+        <li>the Jane Goodall Institute</li>
+        <li>John Lewis</li>
+        <li>K9</li>
+        <li>lastminute.com</li>
+        <li>L’Oreal</li>
+        <li>made.com</li>
+        <li>Max Factor</li>
+        <li>MAL</li>
+        <li>New York Times Magazine</li>
+        <li>National Whistleblower Center</li>
+        <li>Natura &Co.</li>
+        <li>Nike</li>
+        <li>Nikon</li>
+        <li>Ocean Alliance</li>
+        <li>Oman Air</li>
+        <li>Overfinch</li>
+        <li>Parley</li>
+        <li>Rewriting Extinction</li>
+        <li>Sunday Times Style</li>
+        <li>Sunshine Agency</li>
+        <li>Surfers Against Sewage</li>
+        <li>The Telegraph</li>
+        <li>The Times</li>
+        <li>TRAFFIC</li>
+        <li>TRESemme</li>
+        <li>Unilever</li>
+        <li>Versatile Studios</li>
+        <li>Vodafone</li>
+        <li>Vogue</li>
+        <li>vWieden + Kennedy</li>
+        <li>Wildlife Justice Commission.</li>
       </ul>
 
-      <a class="contact" href="mailto:andrea@trianglemonday.com">Contact</a>
+      <a href="mailto:andrea@trianglemonday.com">Contact</a>
       <a class="smaller-text" href="mailto:andrea@trianglemonday.com"
         >andrea@trianglemonday.com</a
       >
