--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
       });
     </script>
     <div class="top-banner">
-      <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
+      <img
+        alt="Triangle Monday logo"
+        src="./assets/triangle_logo_centred.png"
+        class="logo"
+      />
     </div>
 
     <iframe
