--- a/index.html
+++ b/index.html
@@ -66,13 +66,27 @@
       <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
     </div>
 
-    <iframe
-      src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
-      id="video"
-      width="100%"
-      allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen
-    ></iframe>
+    <div class="triangle-wrap">
+      <iframe
+        src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
+        id="video"
+        width="100%"
+        allow="autoplay; fullscreen; picture-in-picture"
+        allowfullscreen
+        class="polygon-clip-triangle-isoceles"
+      >
+      </iframe>
+      <svg class="clip-svg">
+        <defs>
+          <clipPath
+            id="polygon-clip-triangle-isoceles"
+            clipPathUnits="objectBoundingBox"
+          >
+            <polygon points="0.5 0, 0.5 0, 0 0.87, 1 0.87" />
+          </clipPath>
+        </defs>
+      </svg>
+    </div>
 
     <div class="bottom-of-page">
       <div class="image-wrapper">
