Update bio and styles

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         clearTimeout(timerId1);
       });
     </script>
+
     <div class="top-banner">
       <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
     </div>
@@ -80,36 +81,58 @@
       </div>
 
       <p>
-        I'm a multi-award winning Executive Producer and Change Agent, producing
-        impact-driven and global branded content in London and Amsterdam for
-        over 18 years.
+        Hi, I'm Andrea, an award-winning Executive Producer and Change Agent
+        that's produced impact-driven and branded content for a global audience
+        for over 18 years.
       </p>
       <p>
-        From social and viral (#NatureNow surpassing 80 million views), to short
-        films (working with celebrities, influencers, NGO’s, right through to
-        100 year old park ranger Betty Reid Hoskins), short series surrounding
-        the climate crisis, keystone species, and the illegal pet trade, and a
-        feature documentary with the Pope.
+        My work is social and viral, including stand-alone short films as well
+        as episodic documentary series. I've focussed on topics related to the
+        increasing climate crisis: from keystone species awareness, to the
+        illegal pet trade, to the stories of activists and environmental
+        leaders. As well as a feature documentary on the Pope, just in case.
       </p>
       <p>
-        I excel at bringing together and managing the best teams for each
-        project, working closely with client partners; marrying creative, story
-        and impact with budgets and low-carbon productions.
+        I've met and worked with a lot of talented people and have a knack for
+        assembling teams with strong chemistry and passion of the work. I work
+        closely with client partners to help you tell your story: balancing
+        creative, strategy, and impact, with your budget and production.
+        Wherever feasible I look for low-carbon solutions to help tread more
+        lightly on our friend the Earth.
       </p>
-      <p class="penultimate-line">
-        Because films and productions do not need to cost the Earth.
-      </p>
-      <p class="bottom-line">Powered by sunshine, plants and nature.</p>
+      <p>Powered by sunshine, plants, and nature.</p>
 
-      <div class="client-list">
-        <h3 class="previous-clients">Clients:</h3>
+      <div class="highlight-list">
+        <span>Some of my highlights:</span>
         <ul>
+          <li>Shooting my own film project in Africa</li>
+          <li>
+            Working with Greta Thunberg in Sweden and George Monbiot in the UK,
+            producing #NatureNow, which has surpassed 80 million views and won 2
+            Webby Awards
+          </li>
+          <li>
+            Working with CEF and the creative team that brought 'Don't Look Up'
+            to our eyes
+          </li>
+          <li>
+            Telling the original intersectional environmentalist story of
+            recently retired 100-year-old park ranger Betty Reid Hoskins
+          </li>
+          <li>Your next big project</li>
+        </ul>
+      </div>
+
+      <div class="client-list-wrapper">
+        <h3 class="previous-clients">Clients:</h3>
+        <ul class="clients-list">
           <li>adam&eveDDB</li>
           <li>Analog Folk</li>
           <li>Apple</li>
           <li>Bentley</li>
           <li>Canon</li>
           <li>Cheetah Conservation Fund</li>
+          <li>Climate Emergency Fund</li>
           <li>Conservation International</li>
           <li>Conservation Carpathia</li>
           <li>Dior</li>
@@ -130,7 +153,7 @@
           <li>John Lewis</li>
           <li>K9</li>
           <li>lastminute.com</li>
-          <li>L’Oreal</li>
+          <li>L'Oreal</li>
           <li>made.com</li>
           <li>Max Factor</li>
           <li>Media Arts Lab</li>
@@ -160,13 +183,9 @@
         </ul>
       </div>
 
-      <a href="mailto:andrea@trianglemonday.com">Contact</a>
-      <a class="smaller-text" href="mailto:andrea@trianglemonday.com"
-        >andrea@trianglemonday.com</a
-      >
-      <a href="tel:+447789871871" class="smaller-text phone-number"
-        >+44 (0)7789 871 871</a
-      >
+      <h3 class="contact">Contact</h3>
+      <a href="mailto:andrea@trianglemonday.com">andrea@trianglemonday.com</a>
+      <a href="tel:+447789871871" class="phone-number">+44 (0)7789 871 871</a>
     </div>
   </body>
 </html>
