--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
             id="polygon-clip-triangle-isoceles"
             clipPathUnits="objectBoundingBox"
           >
-            <polygon points="0.45 0.25, 0.55 0.25, 0.5 0.55, 0.5 0.55">
+            <polygon display="" points="0.45 0.35, 0.55 0.35, 0.5 0.525">
               <animate
                 attributeName="points"
                 begin="1.5s"
-                dur="3s"
+                dur="2.5s"
                 fill="freeze"
-                from="0.45 0.25, 0.55 0.25, 0.5 0.55, 0.5 0.55"
-                by="0.25 0.05, 0.75 0.05, 0.5 0.95, 0.5 0.95"
-                to="0 0, 1 0, 1 1, 0 1"
+                calcMode="paced"
+                from="0.45 0.35, 0.55 0.35, 0.5 0.525, 0.5 0.525"
+                to="0 0, 1 0, 1 1, 0 1 "
               />
             </polygon>
           </clipPath>
