--- a/index.html
+++ b/index.html
@@ -67,36 +67,19 @@
     </div>
 
     <div class="iframe-wrapper">
-      <iframe
-        src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
-        id="video"
-        width="100%"
-        allow="autoplay; fullscreen; picture-in-picture"
-        allowfullscreen
-        class="polygon-clip-triangle-isoceles"
-      >
-      </iframe>
-
-      <svg class="clip-svg">
-        <defs>
-          <clipPath
-            id="polygon-clip-triangle-isoceles"
-            clipPathUnits="objectBoundingBox"
+      <div class="outside">
+        <div class="inside">
+          <iframe
+            src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
+            id="video"
+            width="100%"
+            allow="autoplay; fullscreen; picture-in-picture"
+            allowfullscreen
+            class="polygon-clip-triangle-isoceles"
           >
-            <polygon display="" points="0.45 0.35, 0.55 0.35, 0.5 0.525">
-              <animate
-                attributeName="points"
-                begin="1.5s"
-                dur="2.5s"
-                fill="freeze"
-                calcMode="paced"
-                from="0.45 0.35, 0.55 0.35, 0.5 0.525, 0.5 0.525"
-                to="0 0, 1 0, 1 1, 0 1 "
-              />
-            </polygon>
-          </clipPath>
-        </defs>
-      </svg>
+          </iframe>
+        </div>
+      </div>
     </div>
 
     <div class="bottom-of-page">
