--- a/index.html
+++ b/index.html
@@ -62,22 +62,28 @@
         clearTimeout(timerId1);
       });
     </script>
-    <div class="top-banner">
-      <img alt="Triangle Monday logo" src="./assets/bw_logo.png" class="logo" />
-    </div>
+    <div class="top-half">
+      <div class="top-banner">
+        <img
+          alt="Triangle Monday logo"
+          src="./assets/bw_logo.png"
+          class="logo"
+        />
+      </div>
 
-    <div class="iframe-wrapper">
-      <div class="outside">
-        <div class="inside">
-          <iframe
-            src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
-            id="video"
-            width="100%"
-            allow="autoplay; fullscreen; picture-in-picture"
-            allowfullscreen
-            class="polygon-clip-triangle-isoceles"
-          >
-          </iframe>
+      <div class="iframe-wrapper">
+        <div class="outside">
+          <div class="inside">
+            <iframe
+              src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
+              id="video"
+              width="100%"
+              allow="autoplay; fullscreen; picture-in-picture"
+              allowfullscreen
+              class="polygon-clip-triangle-isoceles"
+            >
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
