--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="outside">
           <div class="inside">
             <iframe
-              src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&autoplay=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/767377341?h=5f2dbdc1f8&title=0&byline=0&portrait=0"
               id="video"
               width="100%"
               allow="autoplay; fullscreen; picture-in-picture"
