--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             Telling the original intersectional environmentalist story of
             recently retired 100-year-old park ranger Betty Reid Hoskins
           </li>
+          <li>Supporting 1% For The Planet on every production</li>
           <li>Your next big project</li>
         </ul>
       </div>
