--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </li> -->
           <li>
             Telling the original intersectional environmentalist story of
-            recently retired 100-year-old park ranger Betty Reid Hoskins
+            recently retired 100-year-old park ranger Betty Reid Soskin
           </li>
           <li>Supporting 1% For The Planet on every production</li>
           <li>Your next big project</li>
