--- a/index.html
+++ b/index.html
@@ -52,49 +52,47 @@
         <img alt="Triangle Monday logo" src="./assets/cropped_v2.svg" />
       </div>
 
-      <p>
-        Hi, I'm Andrea, an award-winning Executive Producer and Change Agent
-        that's produced impact-driven and branded content for a global audience
-        for over 18 years.
-      </p>
-      <p>
-        My work is social and viral, including stand-alone short films as well
-        as episodic documentary series. I've focussed on topics related to the
-        increasing climate crisis: from keystone species awareness, to the
-        illegal pet trade, to the stories of activists and environmental
-        leaders. As well as a feature documentary on the Pope, just in case.
-      </p>
-      <p>
-        I've met and worked with a lot of talented people and have a knack for
-        assembling teams with strong chemistry and passion of the work. I work
-        closely with client partners to help you tell your story: balancing
-        creative, strategy, and impact, with your budget and production.
-        Wherever feasible I look for low-carbon solutions to help tread more
-        lightly on our friend the Earth.
-      </p>
-      <p>Powered by sunshine, plants, and nature.</p>
+      <h2>
+        We aim to create change through film and social content. Responsibly.
+      </h2>
 
-      <div class="highlight-list">
-        <span>Some of my highlights:</span>
-        <ul>
-          <li>Shooting my own film project in Africa</li>
-          <li>
-            Working with Greta Thunberg in Sweden and George Monbiot in the UK,
-            producing #NatureNow, which has surpassed 80 million views and won 2
-            Webby Awards
-          </li>
-          <!-- <li>
-            Working with CEF and the creative team that brought 'Don't Look Up'
-            to our eyes
-          </li> -->
-          <li>
-            Telling the original intersectional environmentalist story of
-            recently retired 100-year-old park ranger Betty Reid Soskin
-          </li>
-          <li>Supporting 1% For The Planet on every production</li>
-          <li>Your next big project</li>
-        </ul>
-      </div>
+      <p>
+        Triangle Monday is a creative production company specializing in
+        creative strategy, content production, and climate-positive campaigns.
+        Led by Andrea Walji, an award-winning Executive Producer with 20+ years
+        of experience, we've been crafting films, photography, and impact
+        campaigns since 2017 that uniquely blend environmental and social
+        justice themes with character-driven storytelling and measurable impact.
+      </p>
+
+      <p>
+        We understand that the challenges we face aren't isolated issues. That's
+        why we infuse our films with deep insight, layered strategy, and a
+        commitment to driving positive change.
+      </p>
+
+      <p>
+        Through visually compelling campaigns, we collaborate with stakeholders,
+        experts, brands, and non-profits to create content that inspires hope,
+        solutions and actions. Our work spans the Sustainable Development Goals,
+        covering topics like illegal pet trade, species awareness, stories of
+        activists and environmental leaders, climate and social justice, natural
+        climate solutions, energy, equality and much more.
+      </p>
+
+      <p>
+        Currently, we're focused on the intersection of the climate crisis and
+        global food systems, partnering with key players to drive food system
+        change through powerful storytelling.
+      </p>
+
+      <p>
+        From concept development and strategic positioning to scriptwriting,
+        design, and final deliverables, we tailor our approach to each project’s
+        unique needs. Andrea curates expert teams based on the project’s brief,
+        budget, and timeline, all while prioritising sustainability and
+        minimising waste.
+      </p>
 
       <div class="client-list-wrapper">
         <h3 class="previous-clients">Clients:</h3>
@@ -113,7 +111,10 @@
           <li>Ellen MacArthur Foundation</li>
           <li>Environmental Investigation Agency</li>
           <li>Fairphone</li>
+          <li>FORMO</li>
           <li>Four Paws</li>
+          <li>Global Canopy</li>
+          <li>Global Witness</li>
           <li>The Guardian</li>
           <li>Harpers Bazaar Netherlands</li>
           <li>Havas London</li>
@@ -128,6 +129,7 @@
           <li>lastminute.com</li>
           <li>L'Oreal</li>
           <li>made.com</li>
+          <li>Make My Money Matter</li>
           <li>Max Factor</li>
           <li>Media Arts Lab</li>
           <li>New York Times Magazine</li>
@@ -139,7 +141,8 @@
           <li>Oman Air</li>
           <li>Overfinch</li>
           <li>Parley</li>
-          <li>Rewriting Extinction</li>
+          <li>Rewriting Earth</li>
+          <li>Special London</li>
           <li>Sunday Times Style</li>
           <li>Sunshine Agency</li>
           <li>Surfers Against Sewage</li>
@@ -155,6 +158,8 @@
           <li>Wildlife Justice Commission</li>
         </ul>
       </div>
+
+      <img src="./clean-creatives-seal.png" class="clean-creatives-seal" />
 
       <h3 class="contact">Contact</h3>
       <a href="mailto:andrea@trianglemonday.com">andrea@trianglemonday.com</a>
