--- a/index.html
+++ b/index.html
@@ -54,45 +54,59 @@
 
       <p>
         Hi, I'm Andrea, an award-winning Executive Producer and Change Agent
-        that's produced impact-driven and branded content for a global audience
-        for over 18 years.
+        who's been producing branded and impact-driven content for a global
+        audience for over 20 years.
       </p>
+
       <p>
-        My work is social and viral, including stand-alone short films as well
-        as episodic documentary series. I've focussed on topics related to the
-        increasing climate crisis: from keystone species awareness, to the
-        illegal pet trade, to the stories of activists and environmental
-        leaders. As well as a feature documentary on the Pope, just in case.
+        Commercially I deliver high end film, photographic, digital and social
+        campaigns, and events.
       </p>
+
+      <p>
+        My impact work is social and viral, including stand-alone short films as
+        well as episodic documentary series. I've focused on topics related to
+        the increasing climate crisis: from our global food systems, alternative
+        proteins, keystone species awareness, and the illegal pet trade, to the
+        stories of activists and environmental leaders. As well as a feature
+        documentary on the Pope, just in case.
+      </p>
+
       <p>
         I've met and worked with a lot of talented people and have a knack for
         assembling teams with strong chemistry and passion of the work. I work
         closely with client partners to help you tell your story: balancing
         creative, strategy, and impact, with your budget and production.
         Wherever feasible I look for low-carbon solutions to help tread more
-        lightly on our friend the Earth.
+        lightly on our friend, the Earth.
       </p>
+
+      <p>
+        Someone who likes to make things happen, I have an entrepreneurial
+        spirit, balanced with a calm and considered approach that is rooted in
+        experience.
+      </p>
+
       <p>Powered by sunshine, plants, and nature.</p>
 
       <div class="highlight-list">
-        <span>Some of my highlights:</span>
+        <span>Skills:</span>
         <ul>
-          <li>Shooting my own film project in Africa</li>
           <li>
-            Working with Greta Thunberg in Sweden and George Monbiot in the UK,
-            producing #NatureNow, which has surpassed 80 million views and won 2
-            Webby Awards
+            Integrated full service production across film, content &
+            photography
           </li>
-          <!-- <li>
-            Working with CEF and the creative team that brought 'Don't Look Up'
-            to our eyes
-          </li> -->
+          <li>Commissioning content creation</li>
+          <li>Designing editorial guidelines & content strategy</li>
+          <li>Business Affairs: negotiating contracts & licensing</li>
+          <li>Managing & mentoring teams</li>
           <li>
-            Telling the original intersectional environmentalist story of
-            recently retired 100-year-old park ranger Betty Reid Soskin
+            Driving positive change through films & content with supporting
+            impact campaigns and reports
           </li>
-          <li>Supporting 1% For The Planet on every production</li>
-          <li>Your next big project</li>
+          <li>
+            Planning, tracking & reporting low carbon production practices
+          </li>
         </ul>
       </div>
 
@@ -110,10 +124,14 @@
           <li>Conservation Carpathia</li>
           <li>Dior</li>
           <li>Dyson</li>
+          <li>EAT Forum</li>
           <li>Ellen MacArthur Foundation</li>
           <li>Environmental Investigation Agency</li>
           <li>Fairphone</li>
+          <li>FORMO</li>
           <li>Four Paws</li>
+          <li>Global Canopy</li>
+          <li>Global Witness</li>
           <li>The Guardian</li>
           <li>Harpers Bazaar Netherlands</li>
           <li>Havas London</li>
@@ -129,6 +147,7 @@
           <li>L'Oreal</li>
           <li>made.com</li>
           <li>Max Factor</li>
+          <li>Make My Money Matter</li>
           <li>Media Arts Lab</li>
           <li>New York Times Magazine</li>
           <li>National Whistleblower Center</li>
@@ -139,7 +158,8 @@
           <li>Oman Air</li>
           <li>Overfinch</li>
           <li>Parley</li>
-          <li>Rewriting Extinction</li>
+          <li>Rewriting Earth</li>
+          <li>Special London</li>
           <li>Sunday Times Style</li>
           <li>Sunshine Agency</li>
           <li>Surfers Against Sewage</li>
